--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,10 @@
         <div class="col-lg-7">
           <div class="card-clean p-4 rounded-4 h-100">
             <h2 class="h5 text-brand mb-3">Send a message</h2>
-            <!-- NOTE: Replace action with your backend endpoint when ready. For now this is a placeholder. -->
-            <form action="#" method="post" class="needs-validation" novalidate>
+            <form id="contactForm" action="https://api.web3forms.com/submit" method="POST" class="needs-validation" novalidate>
+              <input type="hidden" name="access_key" value="d5b2b677-e134-45d0-909e-544534c5dc1b">
+              <input type="hidden" name="subject" value="New Tang Tutoring Inquiry">
+              <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
               <div class="row g-3">
                 <div class="col-sm-6">
                   <label for="name" class="form-label">Your name</label>
@@ -144,10 +146,6 @@
                 </div>
                   <button class="btn btn-accent btn-lg" type="submit">Send Message</button>
                 </div>
-                <!-- Success/Failure placeholder -->
-                <div class="col-12">
-                  <div id="formStatus" class="mt-3" role="status" aria-live="polite"></div>
-                </div>
               </div>
             </form>
           </div>
@@ -167,3 +165,44 @@
       <div>© <span id="year"></span> Tang Tutoring</div>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    (function(){
+      const form = document.getElementById('contactForm');
+      const status = document.getElementById('formStatus');
+
+      form.addEventListener('submit', async function(e){
+        e.preventDefault();
+
+        // HTML5 validation
+        if(!form.checkValidity()){
+          form.classList.add('was-validated');
+          status.innerHTML = '<div class="alert alert-danger mt-3">Please fix the highlighted fields and try again.</div>';
+          return;
+        }
+
+        status.innerHTML = '<div class="alert alert-info mt-3">Sending…</div>';
+
+        try {
+          const data = new FormData(form);
+          const res = await fetch(form.action, {
+            method: form.method,
+            body: data,
+            headers: { 'Accept': 'application/json' }
+          });
+
+          if(res.ok){
+            status.innerHTML = '<div class="alert alert-success mt-3">✅ Thanks! We’ll be in touch within 1–2 business days.</div>';
+            form.reset();
+            form.classList.remove('was-validated');
+          } else {
+            status.innerHTML = '<div class="alert alert-warning mt-3">⚠️ Something went wrong. Please try again or email us directly.</div>';
+          }
+        } catch(err){
+          status.innerHTML = '<div class="alert alert-danger mt-3">❌ Network error. Please try again later.</div>';
+        }
+      });
+    })();
+</script>
+</body>
