--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tang Tutoring — About</title>
-  
+  <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Font Awesome (icons) -->
@@ -45,7 +45,7 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
@@ -121,11 +121,11 @@
               <h3 class="h5 mb-1">Wesley Tang</h3>
               <p class="text-secondary mb-3">B.S. Aerospace Eng • M.S. Business • Software Engineer</p>
             </div>
-            <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as a software engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
+            <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as a engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
             <ul class="list-unstyled list-check mb-0">
               <li><i class="fa-solid fa-check me-2"></i>Algebra through AP Calculus</li>
               <li><i class="fa-solid fa-check me-2"></i>Biology, Chemistry, Physics (incl. AP)</li>
-              <li><i class="fa-solid fa-check me-2"></i>Intro to programming (Python)</li>
+              <li><i class="fa-solid fa-check me-2"></i>Programming</li>
             </ul>
           </div>
         </div>
