--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tang Tutoring — Contact</title>
-
+  <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Icons (optional) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  
   <!-- Inline styles (move to styles.css later) -->
   <style>
     :root{ --brand-navy:#1a2b4c; --brand-navy-800:#0f1a2e; --brand-accent:#f5a623; --brand-accent-600:#d7901d; --brand-light:#f7f9fc; }
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
