--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-9">
           <p class="lead mb-3">
-            We believe learning should be supportive, low‑stress, and even fun. Ari brings classroom teaching and tutoring experience as a credentialed teacher, while Wesley adds a Master’s degree, prior tutoring, and over 10 years in the tech industry. Together, we help students build skills and confidence across math, science, and programming.
+            We believe learning should be supportive, low-stress, and even fun. Together we combine classroom teaching, tutoring experience, and industry expertise to guide students through math, science, programming, and other subjects in a way that builds both skills and confidence.
           </p>
           <div class="alert alert-info text-center rounded-4 mb-0">
             🎉 New to Tang Tutoring? Enjoy a <strong>free 30‑minute trial session</strong> — online anywhere or in‑person across Ventura County.
@@ -101,13 +101,15 @@
                 <img src="images/ad_profile_pic.jpg" alt="Ari – Tang Tutoring">
               </div>
               <h3 class="h5 mb-1">Ari Tang</h3>
-              <p class="text-secondary mb-3">Credentialed Teacher • Tutor • M.S. CS in progress</p>
+              <p class="text-secondary mb-3">Credentialed Teacher • M.S. CS (in progress) • Tech Lead</p>
             </div>
-            <p class="mb-3">Ari is a credentialed teacher with 3 years of classroom experience in math and over 4 years of tutoring. Currently earning a Master’s in Computer Science at CSU Channel Islands and working in the tech industry as a product quality engineer, Ari brings both teaching expertise and real‑world STEM perspective to tutoring.</p>
+            <p class="mb-3">Ari has a background as a credentialed teacher with 3 years of classroom experience in math and more than 4 years of tutoring. 
+              Currently pursuing a Master’s in Computer Science at CSU Channel Islands and working in the tech industry, 
+              Ari brings both teaching expertise and real-world STEM perspective to help students feel supported, capable, and confident.</p>
             <ul class="list-unstyled list-check mb-0">
               <li><i class="fa-solid fa-check me-2"></i>Grades K–8 (any subject)</li>
-              <li><i class="fa-solid fa-check me-2"></i>High school math foundations</li>
-              <li><i class="fa-solid fa-check me-2"></i>Study skills & organization</li>
+              <li><i class="fa-solid fa-check me-2"></i>High school math (Math 1-3, Algebra, Geometry, Pre-Calc)</li>
+              <li><i class="fa-solid fa-check me-2"></i>Intro to Programming</li>
             </ul>
           </div>
         </div>
@@ -123,7 +125,7 @@
             </div>
             <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as a engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
             <ul class="list-unstyled list-check mb-0">
-              <li><i class="fa-solid fa-check me-2"></i>Algebra through AP Calculus</li>
+              <li><i class="fa-solid fa-check me-2"></i>High school math (Math 1-3, Algebra, Geometry, Pre-Calc, Calculus)</li>
               <li><i class="fa-solid fa-check me-2"></i>Biology, Chemistry, Physics (incl. AP)</li>
               <li><i class="fa-solid fa-check me-2"></i>Programming</li>
             </ul>
@@ -143,7 +145,7 @@
             <ul class="mb-0">
               <li class="mb-2"><strong>Meet students where they are.</strong> We start with a quick check‑in to understand goals and challenges.</li>
               <li class="mb-2"><strong>Make learning click.</strong> Clear explanations, worked examples, and guided practice.</li>
-              <li class="mb-2"><strong>Build confident habits.</strong> Light accountability, study skills, and simple routines.</li>
+              <li class="mb-2"><strong>Build confident habits.</strong> Consistent support, study skills, and simple routines.</li>
               <li class="mb-0"><strong>Keep parents in the loop.</strong> Brief updates and progress notes as requested.</li>
             </ul>
           </div>
@@ -160,15 +162,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="py-5 bg-brand text-white">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-2">Ready to see if we're a fit?</h2>
-      <p class="mb-4 text-white-50">Start with a free 30‑minute trial session — no pressure, just a friendly chat and a bit of learning.</p>
-      <a href="/contact" class="btn btn-accent btn-lg">Get Started</a>
     </div>
   </section>
 
