--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tang Tutoring — About</title>
+  <title>About Us | Tang Tutoring – Experienced Tutors in Ventura County</title>
+  <meta name="description" content="Learn about Tang Tutoring. With classroom teaching, tutoring experience, and real-world STEM backgrounds, we help students build skills and confidence across math, science, programming, and more.">
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
