--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tang Tutoring — Contact</title>
+  <title>Contact Tang Tutoring | Schedule a Free 30-Minute Trial Session</title>
+  <meta name="description" content="Get in touch with Tang Tutoring. Schedule your free 30-minute trial and discover how we make learning supportive, low-stress, and confidence-boosting across math, science, programming, and more.">
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
