--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tang Tutoring — Home</title>
+  <title>Tang Tutoring | Math, Science, Programming & More in Ventura County</title>
+  <meta name="description" content="Personalized K–12 tutoring in math, science, programming, and more. Online anywhere or in-person across Ventura County. Book a free 30-minute trial session today.">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Tang Tutoring | Math, Science, Programming & More in Ventura County">
+  <meta property="og:description" content="Personalized K–12 tutoring in math, science, programming, and more. Online anywhere or in-person across Ventura County. Book a free 30-minute trial session today.">
+  <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:url" content="https://tangtutoring.com">
+  <meta property="og:type" content="website">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Tang Tutoring | Math, Science, Programming & More in Ventura County">
+  <meta name="twitter:description" content="Personalized K–12 tutoring in math, science, programming, and more. Online anywhere or in-person across Ventura County. Book a free 30-minute trial session today.">
+  <meta name="twitter:image" content="https://tangtutoring.com/images/preview.jpg">
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
