--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tang Tutoring — Services</title>
+  <title>Tutoring Services | Tang Tutoring – K-12 Math, Science, Programming & More</title>
+  <meta name="description" content="Explore our tutoring services for K–12 students. We provide support in math, science, programming, study skills, and more with flexible online or in-person sessions.">
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
