--- a/about.html
+++ b/about.html
@@ -5,15 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About Us | Tang Tutoring – Experienced Tutors in Ventura County</title>
   <meta name="description" content="Learn about Tang Tutoring. With classroom teaching, tutoring experience, and real-world STEM backgrounds, we help students build skills and confidence across math, science, programming, and more.">
+  <!-- Open Graph -->
+  <meta property="og:title" content="About Us | Tang Tutoring – Experienced Tutors in Ventura County">
+  <meta property="og:description" content="Learn about Tang Tutoring. With classroom teaching, tutoring experience, and real-world STEM backgrounds, we help students build skills and confidence across math, science, programming, and more.">
+  <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:url" content="https://tangtutoring.com/about.html">
+  <meta property="og:type" content="website">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About Us | Tang Tutoring – Experienced Tutors in Ventura County">
+  <meta name="twitter:description" content="Learn about Tang Tutoring. With classroom teaching, tutoring experience, and real-world STEM backgrounds, we help students build skills and confidence across math, science, programming, and more.">
+  <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Font Awesome (icons) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <!-- Bootstrap Icons (optional small UI icons) -->
+  <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-  <!-- Inline styles (move to styles.css later) -->
   <style>
     :root{ --brand-navy:#1a2b4c; --brand-navy-800:#0f1a2e; --brand-accent:#f5a623; --brand-accent-600:#d7901d; --brand-light:#f7f9fc; }
     body{font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif}
