--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Tang Tutoring | Math, Science, Programming & More in Ventura County">
   <meta name="twitter:description" content="Personalized K–12 tutoring in math, science, programming, and more. Online anywhere or in-person across Ventura County. Book a free 30-minute trial session today.">
-  <meta name="twitter:image" content="https://tangtutoring.com/images/preview.jpg">
+  <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
