--- a/services.html
+++ b/services.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tutoring Services | Tang Tutoring – K-12 Math, Science, Programming & More</title>
   <meta name="description" content="Explore our tutoring services for K–12 students. We provide support in math, science, programming, study skills, and more with flexible online or in-person sessions.">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Tutoring Services | Tang Tutoring – K-12 Math, Science, Programming & More">
+  <meta property="og:description" content="Explore our tutoring services for K–12 students. We provide support in math, science, programming, study skills, and more — with flexible online or in-person sessions.">
+  <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:url" content="https://tangtutoring.com/services.html">
+  <meta property="og:type" content="website">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Tutoring Services | Tang Tutoring – K-12 Math, Science, Programming & More">
+  <meta name="twitter:description" content="Explore our tutoring services for K–12 students. We provide support in math, science, programming, study skills, and more — with flexible online or in-person sessions.">
+  <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
