--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,8 @@
                     <option value="" selected disabled>Choose one</option>
                     <option>K–8 Tutoring (any subject)</option>
                     <option>High School Math & Science (incl. AP)</option>
-                    <option>Intro to Programming</option>
+                    <option>Programming</option>
+                    <option>Other</option>
                     <option>Not sure yet</option>
                   </select>
                   <div class="invalid-feedback">Please select a service.</div>
@@ -164,6 +165,7 @@
                   <textarea class="form-control" id="message" name="message" rows="4" placeholder="What subjects, upcoming tests, or goals should we know about?"></textarea>
                 </div>
                   <button class="btn btn-accent btn-lg" type="submit">Send Message</button>
+                  <div id="form-status" class="mt-3" aria-live="polite"></div>
                 </div>
               </div>
             </form>
@@ -188,42 +190,61 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    (function(){
-      const form = document.getElementById('contactForm');
-      const status = document.getElementById('formStatus');
+    (function () {
+  'use strict';
 
-      form.addEventListener('submit', async function(e){
-        e.preventDefault();
+  // Bootstrap validation
+  const forms = document.querySelectorAll('.needs-validation');
+  Array.prototype.slice.call(forms).forEach(function (form) {
+    form.addEventListener('submit', function (event) {
+      if (!form.checkValidity()) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+      form.classList.add('was-validated');
+    }, false);
+  });
 
-        // HTML5 validation
-        if(!form.checkValidity()){
-          form.classList.add('was-validated');
-          status.innerHTML = '<div class="alert alert-danger mt-3">Please fix the highlighted fields and try again.</div>';
-          return;
+  // Web3Forms submission
+  const form = document.getElementById('contactForm');
+  if (form) {
+    const statusEl = document.getElementById('form-status');
+    const submitBtn = form.querySelector('button[type="submit"]');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      if (!form.checkValidity()) return; // stop if invalid
+
+      statusEl.textContent = '';
+      submitBtn.disabled = true;
+      const oldText = submitBtn.textContent;
+      submitBtn.textContent = 'Sending…';
+
+      try {
+        const res = await fetch(form.action, {
+          method: 'POST',
+          body: new FormData(form)
+        });
+        const data = await res.json();
+
+        if (data.success) {
+          statusEl.className = 'alert alert-success mt-3';
+          statusEl.textContent = 'Thanks! We received your message and will reply shortly.';
+          form.reset();
+          form.classList.remove('was-validated');
+        } else {
+          throw new Error(data.message || 'Submission failed.');
         }
-
-        status.innerHTML = '<div class="alert alert-info mt-3">Sending…</div>';
-
-        try {
-          const data = new FormData(form);
-          const res = await fetch(form.action, {
-            method: form.method,
-            body: data,
-            headers: { 'Accept': 'application/json' }
-          });
-
-          if(res.ok){
-            status.innerHTML = '<div class="alert alert-success mt-3">✅ Thanks! We’ll be in touch within 1–2 business days.</div>';
-            form.reset();
-            form.classList.remove('was-validated');
-          } else {
-            status.innerHTML = '<div class="alert alert-warning mt-3">⚠️ Something went wrong. Please try again or email us directly.</div>';
-          }
-        } catch(err){
-          status.innerHTML = '<div class="alert alert-danger mt-3">❌ Network error. Please try again later.</div>';
-        }
-      });
-    })();
+      } catch (err) {
+        statusEl.className = 'alert alert-danger mt-3';
+        statusEl.textContent = 'Error: ' + err.message;
+      } finally {
+        submitBtn.disabled = false;
+        submitBtn.textContent = oldText;
+      }
+    });
+  }
+})();
     document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
